--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@types/jsonwebtoken": "^9.0.5",
         "@types/uuid": "^9.0.8",
+        "axios": "^1.7.9",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.2",
         "express": "^4.18.2",
